[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/objects/ui_components/popups/popup_base.gd" type="Script" id=1]
[ext_resource path="res://resources/godot/popup_theme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.254902, 0.12549, 0.12549, 1 )

[node name="PopupBase" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.313726 )

[node name="Content" type="PanelContainer" parent="."]
margin_left = 425.0
margin_top = 267.0
margin_right = 598.0
margin_bottom = 333.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Content"]
margin_left = 7.0
margin_top = 7.0
margin_right = 166.0
margin_bottom = 59.0

[node name="Title" type="Label" parent="Content/VBoxContainer"]
margin_right = 159.0
margin_bottom = 21.0
custom_styles/normal = SubResource( 1 )
text = "Ask a question here"
align = 1

[node name="Choice" type="HBoxContainer" parent="Content/VBoxContainer"]
margin_top = 25.0
margin_right = 159.0
margin_bottom = 52.0

[node name="OK" type="Button" parent="Content/VBoxContainer/Choice"]
margin_right = 77.0
margin_bottom = 27.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "OK"

[node name="Cancel" type="Button" parent="Content/VBoxContainer/Choice"]
margin_left = 81.0
margin_right = 159.0
margin_bottom = 27.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="Error" type="PanelContainer" parent="."]
visible = false
margin_left = 452.0
margin_top = 520.0
margin_right = 572.0
margin_bottom = 600.0
rect_min_size = Vector2( 120, 80 )
size_flags_horizontal = 6
size_flags_vertical = 10

[node name="HBoxContainer" type="VBoxContainer" parent="Error"]
margin_left = 7.0
margin_top = 7.0
margin_right = 113.0
margin_bottom = 73.0

[node name="Label" type="Label" parent="Error/HBoxContainer"]
margin_right = 106.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0.945098, 0.25098, 0.25098, 1 )
text = "Error: ..."

[node name="Button" type="Button" parent="Error/HBoxContainer"]
margin_top = 39.0
margin_right = 106.0
margin_bottom = 66.0
size_flags_vertical = 10
text = "Close"

[connection signal="gui_input" from="Background" to="." method="_on_background_gui_input"]
[connection signal="pressed" from="Content/VBoxContainer/Choice/OK" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="Content/VBoxContainer/Choice/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Error/HBoxContainer/Button" to="." method="_on_close_error_pressed"]
